@@ -2,7 +2,6 @@
 package com.yahoo.schema.derived;
 
 import ai.vespa.rankingexpression.importer.configmodelview.ImportedMlModels;
-import com.google.common.collect.ImmutableList;
 import com.yahoo.collections.Pair;
 import com.yahoo.compress.Compressor;
 import com.yahoo.config.model.api.ModelContext;
@@ -20,7 +19,6 @@ import com.yahoo.searchlib.rankingexpression.Reference;
 import com.yahoo.searchlib.rankingexpression.parser.ParseException;
 import com.yahoo.searchlib.rankingexpression.rule.ReferenceNode;
 import com.yahoo.searchlib.rankingexpression.rule.SerializationContext;
-import com.yahoo.tensor.TensorType;
 import com.yahoo.vespa.config.search.RankProfilesConfig;
 
 import java.nio.ByteBuffer;
@@ -87,9 +85,9 @@ public class RawRankProfile implements RankProfilesConfig.Producer {
 
     private List<Pair<String, String>> decompress(Compressor.Compression compression) {
         String propertiesString = new String(compressor.decompress(compression), StandardCharsets.UTF_8);
-        if (propertiesString.isEmpty()) return ImmutableList.of();
+        if (propertiesString.isEmpty()) return List.of();
 
-        ImmutableList.Builder<Pair<String, String>> properties = new ImmutableList.Builder<>();
+        List<Pair<String, String>> properties = new ArrayList<>();
         for (int pos = 0; pos < propertiesString.length();) {
             int keyEndPos = propertiesString.indexOf(keyEndMarker, pos);
             String key = propertiesString.substring(pos, keyEndPos);
@@ -99,7 +97,7 @@ public class RawRankProfile implements RankProfilesConfig.Producer {
             pos = valueEndPos + valueEndMarker.length();
             properties.add(new Pair<>(key, value));
         }
-        return properties.build();
+        return List.copyOf(properties);
     }
 
     public String getName() { return name; }
@@ -196,7 +194,7 @@ public class RawRankProfile implements RankProfilesConfig.Producer {
             rankProperties = new ArrayList<>(compiled.getRankProperties());
 
             Map<String, RankProfile.RankingExpressionFunction> functions = compiled.getFunctions();
-            List<ExpressionFunction> functionExpressions = functions.values().stream().map(f -> f.function()).collect(Collectors.toList());
+            List<ExpressionFunction> functionExpressions = functions.values().stream().map(RankProfile.RankingExpressionFunction::function).toList();
             Map<String, String> functionProperties = new LinkedHashMap<>();
             SerializationContext functionSerializationContext = new SerializationContext(functionExpressions,
                                                                                          Map.of(),
@@ -248,8 +246,8 @@ public class RawRankProfile implements RankProfilesConfig.Producer {
                 String expressionString = e.getValue().function().getBody().getRoot().toString(context).toString();
 
                 context.addFunctionSerialization(propertyName, expressionString);
-                for (Map.Entry<String, TensorType> argumentType : e.getValue().function().argumentTypes().entrySet())
-                    context.addArgumentTypeSerialization(e.getKey(), argumentType.getKey(), argumentType.getValue());
+                e.getValue().function().argumentTypes().entrySet().stream().sorted(Map.Entry.comparingByKey())
+                        .forEach(argumentType -> context.addArgumentTypeSerialization(e.getKey(), argumentType.getKey(), argumentType.getValue()));
                 if (e.getValue().function().returnType().isPresent())
                     context.addFunctionTypeSerialization(e.getKey(), e.getValue().function().returnType().get());
                 // else if (e.getValue().function().arguments().isEmpty()) TODO: Enable this check when we resolve all types
