@@ -3,8 +3,8 @@ package com.yahoo.search.dispatch;
 
 import com.yahoo.collections.Pair;
 import com.yahoo.search.dispatch.searchcluster.Group;
+import com.yahoo.search.dispatch.searchcluster.SearchGroups;
 import com.yahoo.search.dispatch.searchcluster.Node;
-import com.yahoo.search.dispatch.searchcluster.SearchCluster;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -20,49 +20,16 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
- * Utility class for parsing model.searchPath and filtering a search cluster
- * based on it.
+ * A subset of nodes and groups to which a query should be sent.
+ * See https://docs.vespa.ai/en/reference/query-api-reference.html#model.searchpath
  *
  * @author ollivir
  */
 public class SearchPath {
 
-    /**
-     * Parses the search path and select nodes from the given cluster based on it.
-     *
-     * @param searchPath unparsed search path expression (see: model.searchPath in Search API reference)
-     * @param cluster the search cluster from which nodes are selected
-     * @throws InvalidSearchPathException if the searchPath is malformed
-     * @return list of nodes chosen with the search path, or an empty list in which
-     *         case some other node selection logic should be used
-     */
-    public static List<Node> selectNodes(String searchPath, SearchCluster cluster) {
-        Optional<SearchPath> sp = SearchPath.fromString(searchPath);
-        if (sp.isPresent()) {
-            return sp.get().mapToNodes(cluster);
-        } else {
-            return List.of();
-        }
-    }
-
-    static Optional<SearchPath> fromString(String path) {
-        if (path == null || path.isEmpty()) {
-            return Optional.empty();
-        }
-        if (path.indexOf(';') >= 0) {
-            return Optional.empty(); // multi-level not supported at this time
-        }
-        try {
-            SearchPath sp = parseElement(path);
-            if (sp.isEmpty()) {
-                return Optional.empty();
-            } else {
-                return Optional.of(sp);
-            }
-        } catch (NumberFormatException | InvalidSearchPathException e) {
-            throw new InvalidSearchPathException("Invalid search path: " + path, e);
-        }
-    }
+    // An asterisk or forward slash or an empty string followed by a comma or the end of the string
+    private static final Pattern NODE_WILDCARD = Pattern.compile("^\\*?(?:,|$|/$)");
+    private static final Pattern NODE_RANGE = Pattern.compile("^\\[(\\d+),(\\d+)>(?:,|$)");
 
     private final List<Selection> nodes;
     private final List<Selection> groups;
@@ -73,8 +40,19 @@ public class SearchPath {
         this.groups = groups;
     }
 
-    private List<Node> mapToNodes(SearchCluster cluster) {
-        if (cluster.groups().isEmpty()) {
+    @Override
+    public String toString() {
+        StringBuilder sb = new StringBuilder();
+        selectionToString(sb, nodes);
+        if ( ! groups.isEmpty()) {
+            sb.append('/');
+            selectionToString(sb, groups);
+        }
+        return sb.toString();
+    }
+
+    private List<Node> mapToNodes(SearchGroups cluster) {
+        if (cluster.isEmpty()) {
             return List.of();
         }
 
@@ -100,25 +78,25 @@ public class SearchPath {
         return nodes.isEmpty() && groups.isEmpty();
     }
 
-    private Group selectRandomGroupWithSufficientCoverage(SearchCluster cluster, List<Integer> groupIds) {
+    private Group selectRandomGroupWithSufficientCoverage(SearchGroups cluster, List<Integer> groupIds) {
         while ( groupIds.size() > 1 ) {
             int index = random.nextInt(groupIds.size());
             int groupId = groupIds.get(index);
-            Optional<Group> group = cluster.group(groupId);
-            if (group.isPresent()) {
-                if (group.get().hasSufficientCoverage()) {
-                    return group.get();
+            Group group = cluster.get(groupId);
+            if (group != null) {
+                if (group.hasSufficientCoverage()) {
+                    return group;
                 } else {
                     groupIds.remove(index);
                 }
             } else {
-                throw new InvalidSearchPathException("Invalid searchPath, cluster does not have " + (groupId + 1) + " groups");
+                throw new InvalidSearchPathException("Invalid search path: Cluster does not have " + (groupId + 1) + " groups");
             }
         }
-        return cluster.group(groupIds.get(0)).get();
+        return cluster.get(groupIds.get(0));
     }
 
-    private Group selectGroup(SearchCluster cluster) {
+    private Group selectGroup(SearchGroups cluster) {
         if ( ! groups.isEmpty()) {
             List<Integer> potentialGroups = new ArrayList<>();
             for (Selection groupSelection : groups) {
@@ -130,7 +108,44 @@ public class SearchPath {
         }
 
         // pick any working group
-        return selectRandomGroupWithSufficientCoverage(cluster, new ArrayList<>(cluster.groups().keySet()));
+        return selectRandomGroupWithSufficientCoverage(cluster, new ArrayList<>(cluster.keys()));
+    }
+
+    /**
+     * Parses a search path and select nodes from the given cluster based on it.
+     *
+     * @param searchPath unparsed search path expression (see: model.searchPath in Search API reference)
+     * @param cluster the search cluster from which nodes are selected
+     * @throws InvalidSearchPathException if the searchPath is malformed
+     * @return list of nodes chosen with the search path, or an empty list in which
+     *         case some other node selection logic should be used
+     */
+    public static List<Node> selectNodes(String searchPath, SearchGroups cluster) {
+        Optional<SearchPath> sp = SearchPath.fromString(searchPath);
+        if (sp.isPresent()) {
+            return sp.get().mapToNodes(cluster);
+        } else {
+            return List.of();
+        }
+    }
+
+    static Optional<SearchPath> fromString(String path) {
+        if (path == null || path.isEmpty()) {
+            return Optional.empty();
+        }
+        if (path.indexOf(';') >= 0) {
+            return Optional.empty(); // multi-level not supported at this time
+        }
+        try {
+            SearchPath sp = parseElement(path);
+            if (sp.isEmpty()) {
+                return Optional.empty();
+            } else {
+                return Optional.of(sp);
+            }
+        } catch (NumberFormatException | InvalidSearchPathException e) {
+            throw new InvalidSearchPathException("Invalid search path '" + path + "'", e);
+        }
     }
 
     private static SearchPath parseElement(String element) {
@@ -156,14 +171,9 @@ public class SearchPath {
         return ret;
     }
 
-    // An asterisk or forward slash or an empty string followed by a comma or the end of the string
-    private static final Pattern NODE_WILDCARD = Pattern.compile("^\\*?(?:,|$|/$)");
-
     private static boolean isWildcard(String node) {
         return NODE_WILDCARD.matcher(node).lookingAt();
     }
-
-    private static final Pattern NODE_RANGE = Pattern.compile("^\\[(\\d+),(\\d+)>(?:,|$)");
 
     private static String parseNodeRange(String nodes, List<Selection> into) {
         Matcher m = NODE_RANGE.matcher(nodes);
@@ -209,18 +219,8 @@ public class SearchPath {
         }
     }
 
-    @Override
-    public String toString() {
-        StringBuilder sb = new StringBuilder();
-        selectionToString(sb, nodes);
-        if ( ! groups.isEmpty()) {
-            sb.append('/');
-            selectionToString(sb, groups);
-        }
-        return sb.toString();
-    }
-
     private static class Selection {
+
         private final int from;
         private final int to;
 
@@ -234,7 +234,7 @@ public class SearchPath {
                 return Collections.emptyList();
             }
             int end = Math.min(to, max);
-            return IntStream.range(from, end).boxed().collect(Collectors.toList());
+            return IntStream.range(from, end).boxed().toList();
         }
 
         @Override
@@ -247,7 +247,8 @@ public class SearchPath {
         }
     }
 
-    public static class InvalidSearchPathException extends RuntimeException {
+    public static class InvalidSearchPathException extends IllegalArgumentException {
+
         public InvalidSearchPathException(String message) {
             super(message);
         }
@@ -255,6 +256,7 @@ public class SearchPath {
         public InvalidSearchPathException(String message, Throwable cause) {
             super(message, cause);
         }
+
     }
 
 }
