@@ -9,6 +9,7 @@ import com.yahoo.vespa.hosted.controller.api.integration.dns.RecordName;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -39,6 +40,11 @@ public class CreateRecords implements NameServiceRequest {
     }
 
     @Override
+    public Optional<RecordName> name() {
+        return Optional.of(name);
+    }
+
+    @Override
     public void dispatchTo(NameService nameService) {
         switch (type) {
             case ALIAS -> {
@@ -50,7 +56,7 @@ public class CreateRecords implements NameServiceRequest {
                 nameService.createDirect(name, targets);
             }
             case TXT -> {
-                var dataFields = records.stream().map(Record::data).collect(Collectors.toList());
+                var dataFields = records.stream().map(Record::data).toList();
                 nameService.createTxtRecords(name, dataFields);
             }
         }
