@@ -58,7 +58,7 @@ public class OsUpgraderTest {
         // Bootstrap system
         List<ZoneId> nonControllerZones = Stream.of(zone1, zone2, zone3, zone4, zone5)
                 .map(ZoneApi::getVirtualId)
-                .collect(Collectors.toList());
+                .toList();
         tester.configServer().bootstrap(nonControllerZones, List.of(SystemApplication.tenantHost));
         tester.configServer().addNodes(List.of(zone0.getVirtualId()), List.of(SystemApplication.controllerHost));
 
@@ -72,8 +72,8 @@ public class OsUpgraderTest {
 
         // New OS version released
         Version version1 = Version.fromString("7.1");
-        tester.controller().upgradeOsIn(cloud1, Version.fromString("7.0"), Duration.ZERO, false);
-        tester.controller().upgradeOsIn(cloud1, version1, Duration.ZERO, false);
+        tester.controller().upgradeOsIn(cloud1, Version.fromString("7.0"), false);
+        tester.controller().upgradeOsIn(cloud1, version1, false);
         assertEquals(1, tester.controller().osVersionTargets().size()); // Only allows one version per cloud
         statusUpdater.maintain();
 
@@ -135,76 +135,6 @@ public class OsUpgraderTest {
     }
 
     @Test
-    void upgrade_os_with_budget() {
-        CloudName cloud = CloudName.from("cloud");
-        ZoneApi zone0 = zone("prod.us-north-42", "prod.controller", cloud);
-        ZoneApi zone1 = zone("dev.us-east-1", cloud);
-        ZoneApi zone2 = zone("prod.us-west-1", cloud);
-        ZoneApi zone3 = zone("prod.us-central-1", cloud);
-        ZoneApi zone4 = zone("prod.eu-west-1", cloud);
-        UpgradePolicy upgradePolicy = UpgradePolicy.builder()
-                .upgrade(zone0)
-                .upgrade(zone1)
-                .upgradeInParallel(zone2, zone3)
-                .upgrade(zone4)
-                .build();
-        OsUpgrader osUpgrader = osUpgrader(upgradePolicy, cloud, true);
-
-        // Bootstrap system
-        List<SystemApplication> nodeTypes = List.of(SystemApplication.configServerHost, SystemApplication.tenantHost);
-        tester.configServer().bootstrap(List.of(zone1.getId(), zone2.getId(), zone3.getId(), zone4.getId()),
-                nodeTypes);
-        tester.configServer().addNodes(List.of(zone0.getVirtualId()), List.of(SystemApplication.controllerHost));
-
-        // Upgrade with budget
-        Version version = Version.fromString("7.1");
-        tester.controller().upgradeOsIn(cloud, version, Duration.ofHours(12), false);
-        assertEquals(Duration.ofHours(12), tester.controller().osVersionTarget(cloud).get().upgradeBudget());
-        statusUpdater.maintain();
-        osUpgrader.maintain();
-
-        // Controllers upgrade first
-        osUpgrader.maintain();
-        assertWanted(version, SystemApplication.controllerHost, zone0);
-        assertEquals(Duration.ZERO, upgradeBudget(zone0, SystemApplication.controllerHost, version), "Controller zone gets a zero budget");
-        completeUpgrade(version, SystemApplication.controllerHost, zone0);
-        statusUpdater.maintain();
-        assertEquals(3, nodesOn(version).size());
-
-        // First zone upgrades
-        osUpgrader.maintain();
-        for (var nodeType : nodeTypes) {
-            assertEquals(Duration.ofHours(4), upgradeBudget(zone1, nodeType, version));
-            completeUpgrade(version, nodeType, zone1);
-        }
-
-        // Next set of zones upgrade
-        osUpgrader.maintain();
-        for (var zone : List.of(zone1, zone2, zone3)) {
-            for (var nodeType : nodeTypes) {
-                assertEquals(Duration.ofHours(4),
-                        upgradeBudget(zone, nodeType, version),
-                        "Parallel prod zones share the budget of a single zone");
-                completeUpgrade(version, nodeType, zone);
-            }
-        }
-
-        // Last zone upgrades
-        osUpgrader.maintain();
-        for (var nodeType : nodeTypes) {
-            assertEquals(Duration.ofHours(4),
-                    upgradeBudget(zone4, nodeType, version),
-                    nodeType + " in last prod zone gets the budget of a single zone");
-            completeUpgrade(version, nodeType, zone4);
-        }
-
-        // All host applications upgraded
-        statusUpdater.maintain();
-        assertTrue(tester.controller().osVersionStatus().nodesIn(cloud).stream()
-                .allMatch(node -> node.currentVersion().equals(version)), "All nodes on target version");
-    }
-
-    @Test
     void upgrade_os_nodes_choose_newer_version() {
         CloudName cloud = CloudName.from("cloud");
         ZoneApi zone1 = zone("dev.us-east-1", cloud);
@@ -221,8 +151,8 @@ public class OsUpgraderTest {
 
         // New OS version released
         Version version = Version.fromString("7.1");
-        tester.controller().upgradeOsIn(cloud, Version.fromString("7.0"), Duration.ZERO, false);
-        tester.controller().upgradeOsIn(cloud, version, Duration.ZERO, false); // Replaces existing target
+        tester.controller().upgradeOsIn(cloud, Version.fromString("7.0"), false);
+        tester.controller().upgradeOsIn(cloud, version, false); // Replaces existing target
         statusUpdater.maintain();
 
         // zone 1 upgrades
@@ -247,18 +177,11 @@ public class OsUpgraderTest {
                 .noneMatch(node -> node.currentVersion().isBefore(version)), "All nodes on target version or newer");
     }
 
-    private Duration upgradeBudget(ZoneApi zone, SystemApplication application, Version version) {
-        var upgradeBudget = tester.configServer().nodeRepository().osUpgradeBudget(zone.getVirtualId(), application.nodeType(), version);
-        assertTrue(upgradeBudget.isPresent(),
-                   "Expected budget for upgrade to " + version + " of " + application.id() + " in " + zone.getVirtualId());
-        return upgradeBudget.get();
-    }
-
     private List<NodeVersion> nodesOn(Version version) {
         return tester.controller().osVersionStatus().versions().entrySet().stream()
                      .filter(entry -> entry.getKey().version().equals(version))
                      .flatMap(entry -> entry.getValue().stream())
-                     .collect(Collectors.toList());
+                     .toList();
     }
 
     private void assertCurrent(Version version, SystemApplication application, ZoneApi... zones) {
@@ -287,7 +210,7 @@ public class OsUpgraderTest {
         return nodeRepository().list(zone.getVirtualId(), NodeFilter.all().applications(application.id()))
                                .stream()
                                .filter(node -> OsUpgrader.canUpgrade(node, false))
-                               .collect(Collectors.toList());
+                               .toList();
     }
 
     private Node failNodeIn(ZoneApi zone, SystemApplication application) {
@@ -343,7 +266,7 @@ public class OsUpgraderTest {
     }
 
     private OsUpgrader osUpgrader(UpgradePolicy upgradePolicy, CloudName cloud, boolean dynamicProvisioning) {
-        var zones = upgradePolicy.steps().stream().map(Step::zones).flatMap(Collection::stream).collect(Collectors.toList());
+        var zones = upgradePolicy.steps().stream().map(Step::zones).flatMap(Collection::stream).toList();
         tester.zoneRegistry()
               .setZones(zones)
               .setOsUpgradePolicy(cloud, upgradePolicy);
