@@ -9,6 +9,7 @@ import com.yahoo.config.application.api.ValidationId;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.AthenzDomain;
 import com.yahoo.config.provision.AthenzService;
+import com.yahoo.config.provision.CloudAccount;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.Environment;
 import com.yahoo.config.provision.HostName;
@@ -21,8 +22,10 @@ import com.yahoo.vespa.hosted.controller.Instance;
 import com.yahoo.vespa.hosted.controller.api.identifiers.DeploymentId;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.LoadBalancer;
 import com.yahoo.vespa.hosted.controller.api.integration.dns.Record;
+import com.yahoo.vespa.hosted.controller.api.integration.dns.Record.Type;
 import com.yahoo.vespa.hosted.controller.api.integration.dns.RecordData;
 import com.yahoo.vespa.hosted.controller.api.integration.dns.RecordName;
+import com.yahoo.vespa.hosted.controller.api.integration.dns.VpcEndpointService.DnsChallenge;
 import com.yahoo.vespa.hosted.controller.application.Endpoint;
 import com.yahoo.vespa.hosted.controller.application.EndpointId;
 import com.yahoo.vespa.hosted.controller.application.EndpointList;
@@ -35,6 +38,7 @@ import com.yahoo.vespa.hosted.controller.deployment.DeploymentTester;
 import com.yahoo.vespa.hosted.controller.integration.ZoneApiMock;
 import com.yahoo.vespa.hosted.rotation.config.RotationsConfig;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 
 import java.time.Duration;
 import java.time.Instant;
@@ -47,11 +51,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /**
  * @author mortent
@@ -285,7 +292,7 @@ public class RoutingPoliciesTest {
                 "c0.app2.tenant1.us-west-1.vespa.oath.cloud",
                 "c1.app2.tenant1.us-west-1.vespa.oath.cloud"
         );
-        assertEquals(expectedRecords.stream().sorted().collect(Collectors.toList()), tester.recordNames().stream().sorted().collect(Collectors.toList()));
+        assertEquals(expectedRecords.stream().sorted().toList(), tester.recordNames().stream().sorted().toList());
         assertEquals(4, tester.policiesOf(context2.instanceId()).size());
 
         // Deploy removes cluster from app1
@@ -484,12 +491,13 @@ public class RoutingPoliciesTest {
         // Load balancer for the same application is provisioned again, but with a different hostname
         var newHostname = HostName.of("new-hostname");
         var loadBalancer = new LoadBalancer("LB-0-Z-" + zone1.value(),
-                context.instanceId(),
-                ClusterSpec.Id.from("c0"),
-                Optional.of(newHostname),
-                Optional.empty(),
-                LoadBalancer.State.active,
-                Optional.of("dns-zone-1"));
+                                            context.instanceId(),
+                                            ClusterSpec.Id.from("c0"),
+                                            Optional.of(newHostname),
+                                            Optional.empty(),
+                                            LoadBalancer.State.active,
+                                            Optional.of("dns-zone-1"),
+                                            Optional.empty());
         tester.controllerTester().configServer().putLoadBalancers(zone1, List.of(loadBalancer));
 
         // Application redeployment preserves DNS record
@@ -499,6 +507,48 @@ public class RoutingPoliciesTest {
         assertEquals(newHostname.value() + ".",
                 tester.recordDataOf(Record.Type.CNAME, expectedRecords.iterator().next()).get(0),
                 "CNAME points to current load balancer");
+    }
+
+    @Test
+    @Timeout(30)
+    void private_dns_for_vpc_endpoint() {
+        // Challenge answered for endpoint
+        RoutingPoliciesTester tester = new RoutingPoliciesTester();
+        Map<RecordName, RecordData> challenges = new ConcurrentHashMap<>();
+        tester.tester.controllerTester().serviceRegistry().vpcEndpointService().delegate = (name, cluster, account) -> {
+                RecordName recordName = RecordName.from("challenge--" + name.value());
+                if (challenges.containsKey(recordName)) return Optional.empty();
+                RecordData recordData = RecordData.from(account.map(CloudAccount::value).orElse("system"));
+                return Optional.of(new DnsChallenge(recordName, recordData, () -> challenges.put(recordName, recordData)));
+            };
+
+        DeploymentContext app = tester.newDeploymentContext("t", "a", "default");
+        ApplicationPackage appPackage = applicationPackageBuilder().region(zone3.region()).build();
+        app.submit(appPackage);
+
+        AtomicBoolean done = new AtomicBoolean();
+        new Thread(() -> {
+            while ( ! done.get()) {
+                app.flushDnsUpdates();
+                try { Thread.sleep(10); } catch (InterruptedException e) { break; }
+            }
+        }).start();
+        app.deploy();
+        done.set(true);
+
+        assertEquals(Set.of(new Record(Type.CNAME,
+                                       RecordName.from("a.t.aws-us-east-1a.vespa.oath.cloud"),
+                                       RecordData.from("lb-0--t.a.default--prod.aws-us-east-1a.")),
+                            new Record(Type.TXT,
+                                       RecordName.from("challenge--a.t.aws-us-east-1a.vespa.oath.cloud"),
+                                       RecordData.from("system")),
+                            new Record(Type.TXT,
+                                       RecordName.from("challenge--a.t.us-east-1.test.vespa.oath.cloud"),
+                                       RecordData.from("system")),
+                            new Record(Type.TXT,
+                                       RecordName.from("challenge--a.t.us-east-3.staging.vespa.oath.cloud"),
+                                       RecordData.from("system"))),
+                     tester.controllerTester().nameService().records());
     }
 
     @Test
@@ -902,7 +952,8 @@ public class RoutingPoliciesTest {
                                      lbHostname,
                                      ipAddress,
                                      LoadBalancer.State.active,
-                                     Optional.of("dns-zone-1").filter(__ -> lbHostname.isPresent())));
+                                     Optional.of("dns-zone-1").filter(__ -> lbHostname.isPresent()),
+                                     Optional.empty()));
         }
         return loadBalancers;
     }
@@ -1000,7 +1051,7 @@ public class RoutingPoliciesTest {
             return tester.controllerTester().nameService().findRecords(type, RecordName.from(name)).stream()
                          .map(Record::data)
                          .map(RecordData::asString)
-                         .collect(Collectors.toList());
+                         .toList();
         }
 
         /** Assert that an application endpoint points to given targets and weights */
@@ -1057,7 +1108,7 @@ public class RoutingPoliciesTest {
                 String latencyTarget = "latency/" + regionEndpoint + "/dns-zone-1/" + zone.value();
                 latencyTargets.add(latencyTarget);
             });
-            List<DeploymentId> deployments = zoneWeights.keySet().stream().map(z -> new DeploymentId(instance, z)).collect(Collectors.toList());
+            List<DeploymentId> deployments = zoneWeights.keySet().stream().map(z -> new DeploymentId(instance, z)).toList();
             String globalEndpoint = tester.controller().routing().readDeclaredEndpointsOf(instance)
                                           .named(endpointId)
                                           .targets(deployments)
