@@ -25,7 +25,7 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicReference;
+import java.util.concurrent.CancellationException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -54,14 +54,13 @@ public class ApplicationMetricsRetriever extends AbstractComponent implements Ru
     private final Thread pollThread;
     private final Set<ConsumerId> consumerSet;
     private long pollCount = 0;
-    private boolean stopped;
-
-    private final AtomicReference<Duration> taskTimeout;
+    private volatile boolean stopped;
+    private volatile Duration taskTimeout;
 
     @Inject
     public ApplicationMetricsRetriever(MetricsNodesConfig nodesConfig) {
         clients = createNodeClients(nodesConfig);
-        taskTimeout = new AtomicReference<>(timeout(clients.size()));
+        taskTimeout = timeout(clients.size());
         stopped = false;
         consumerSet = new HashSet<>();
         httpClient.start();
@@ -102,18 +101,23 @@ public class ApplicationMetricsRetriever extends AbstractComponent implements Ru
 
     @Override
     public void deconstruct() {
-        synchronized (pollThread) {
-            stopped = true;
-            pollThread.notifyAll();
-        }
-        try {
-            pollThread.join();
-        } catch (InterruptedException e) {}
         try {
             httpClient.close();
         } catch (IOException e) {
             log.warning("Failed closing httpclient: " + e);
         }
+        synchronized (pollThread) {
+            stopped = true;
+            pollThread.notifyAll();
+        }
+        try {
+            pollThread.join(Duration.ofSeconds(3).toMillis());
+            if (pollThread.isAlive()) {
+                log.log(Level.WARNING, "metrics poller thread still not stopped, using Thread.interrupt():");
+                pollThread.interrupt();
+                pollThread.join();
+            }
+        } catch (InterruptedException e) {}
         super.deconstruct();
     }
 
@@ -153,20 +157,20 @@ public class ApplicationMetricsRetriever extends AbstractComponent implements Ru
     }
 
     private int fetchMetricsAsync(ConsumerId consumer) {
-        Map<Node, Future<Boolean>> futures = new HashMap<>();
+        Map<Node, Future<?>> futures = new HashMap<>();
         for (NodeMetricsClient client : clients) {
-            var optional = client.startSnapshotUpdate(consumer, METRICS_TTL);
-            optional.ifPresent(future -> futures.put(client.node, future));
+            client.startSnapshotUpdate(consumer, METRICS_TTL).ifPresent(future -> futures.put(client.node, future));
         }
         int numOk = 0;
         int numTried = futures.size();
-        for (Map.Entry<Node, Future<Boolean>> entry : futures.entrySet()) {
+        for (Map.Entry<Node, Future<?>> entry : futures.entrySet()) {
+            if (stopped) break;
             try {
-                Boolean result = entry.getValue().get(taskTimeout.get().toMillis(), TimeUnit.MILLISECONDS);
-                if ((result != null) && result) numOk++;
-            } catch (InterruptedException | ExecutionException | TimeoutException e) {
+                entry.getValue().get(taskTimeout.toMillis(), TimeUnit.MILLISECONDS);
+                numOk++;
+            } catch (InterruptedException | ExecutionException | TimeoutException | CancellationException e) {
                 Throwable cause = e.getCause();
-                if ( e instanceof ExecutionException && ((cause instanceof SocketException) || cause instanceof ConnectTimeoutException)) {
+                if (stopped || e instanceof ExecutionException && ((cause instanceof SocketException) || cause instanceof ConnectTimeoutException)) {
                     log.log(Level.FINE, "Failed retrieving metrics for '" + entry.getKey() + "' : " + cause.getMessage());
                 } else {
                     log.log(Level.WARNING, "Failed retrieving metrics for '" + entry.getKey() + "' : ", e);
@@ -181,7 +185,7 @@ public class ApplicationMetricsRetriever extends AbstractComponent implements Ru
         return nodesConfig.node().stream()
                 .map(Node::new)
                 .map(node-> new NodeMetricsClient(httpClient, node, Clock.systemUTC()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     static CloseableHttpAsyncClient createHttpClient() {
@@ -205,7 +209,7 @@ public class ApplicationMetricsRetriever extends AbstractComponent implements Ru
 
     // For testing only!
     void setTaskTimeout(Duration taskTimeout) {
-        this.taskTimeout.set(taskTimeout);
+        this.taskTimeout = taskTimeout;
     }
 
 }
