@@ -4,13 +4,12 @@ package com.yahoo.vespa.hosted.provision.os;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.Cloud;
+import com.yahoo.config.provision.CloudAccount;
 import com.yahoo.config.provision.CloudName;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.HostSpec;
 import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
-import com.yahoo.test.ManualClock;
-import com.yahoo.vespa.flags.Flags;
 import com.yahoo.vespa.flags.PermanentFlags;
 import com.yahoo.vespa.hosted.provision.Node;
 import com.yahoo.vespa.hosted.provision.NodeList;
@@ -22,7 +21,6 @@ import com.yahoo.vespa.hosted.provision.provisioning.ProvisioningTester;
 import org.junit.Test;
 
 import java.time.Duration;
-import java.time.temporal.ChronoUnit;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -52,7 +50,7 @@ public class OsVersionsTest {
         // Upgrade OS
         assertTrue("No versions set", versions.readChange().targets().isEmpty());
         var version1 = Version.fromString("7.1");
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version1, false);
         assertEquals(version1, versions.targetFor(NodeType.host).get());
         assertTrue("Per-node wanted OS version remains unset", hostNodes.get().stream().allMatch(node -> node.status().osVersion().wanted().isEmpty()));
 
@@ -62,7 +60,7 @@ public class OsVersionsTest {
 
         // Upgrade OS again
         var version2 = Version.fromString("7.2");
-        versions.setTarget(NodeType.host, version2, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version2, false);
         assertEquals(version2, versions.targetFor(NodeType.host).get());
 
         // Resume upgrade
@@ -80,12 +78,12 @@ public class OsVersionsTest {
 
         // Downgrading fails
         try {
-            versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
+            versions.setTarget(NodeType.host, version1, false);
             fail("Expected exception");
         } catch (IllegalArgumentException ignored) {}
 
         // Forcing downgrade succeeds
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, true);
+        versions.setTarget(NodeType.host, version1, true);
         assertEquals(version1, versions.targetFor(NodeType.host).get());
 
         // Target can be removed
@@ -98,7 +96,8 @@ public class OsVersionsTest {
     public void max_active_upgrades() {
         int totalNodes = 20;
         int maxActiveUpgrades = 5;
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud(), maxActiveUpgrades);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud());
+        setMaxActiveUpgrades(maxActiveUpgrades);
         provisionInfraApplication(totalNodes);
         Supplier<NodeList> hostNodes = () -> tester.nodeRepository().nodes().list().state(Node.State.active).hosts();
 
@@ -117,7 +116,7 @@ public class OsVersionsTest {
 
         // Set target
         var version1 = Version.fromString("7.1");
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version1, false);
         assertEquals(version1, versions.targetFor(NodeType.host).get());
 
         // Activate target
@@ -130,7 +129,7 @@ public class OsVersionsTest {
                          minVersion(nodesUpgrading, OsVersion::wanted));
             var nodesOnLowestVersion = nodes.asList().stream()
                                             .sorted(Comparator.comparing(node -> node.status().osVersion().current().orElse(Version.emptyVersion)))
-                                            .collect(Collectors.toList())
+                                            .toList()
                                             .subList(0, maxActiveUpgrades);
             assertEquals("Nodes on lowest version are told to upgrade",
                          nodesUpgrading.asList(), nodesOnLowestVersion);
@@ -154,7 +153,7 @@ public class OsVersionsTest {
 
         // Trigger upgrade to next version
         var version2 = Version.fromString("7.2");
-        versions.setTarget(NodeType.host, version2, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version2, false);
         versions.resumeUpgradeOf(NodeType.host, true);
 
         // Wanted version is changed to newest target for all nodes
@@ -163,8 +162,9 @@ public class OsVersionsTest {
 
     @Test
     public void upgrade_by_retiring() {
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.builder().dynamicProvisioning(true).build(), Integer.MAX_VALUE);
-        var clock = (ManualClock) tester.nodeRepository().clock();
+        int maxActiveUpgrades = 2;
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.builder().dynamicProvisioning(true).build());
+        setMaxActiveUpgrades(maxActiveUpgrades);
         int hostCount = 10;
         // Provision hosts and children
         List<Node> hosts = provisionInfraApplication(hostCount);
@@ -175,40 +175,27 @@ public class OsVersionsTest {
         Supplier<NodeList> hostNodes = () -> tester.nodeRepository().nodes().list()
                                                    .hosts()
                                                    .not().state(Node.State.deprovisioned);
-        tester.clock().advance(Duration.ofDays(31)); // Let grace period pass
 
         // Target is set and upgrade started
         var version1 = Version.fromString("7.1");
-        Duration initialBudget = Duration.ofHours(24);
-        versions.setTarget(NodeType.host, version1, initialBudget, false);
-        Duration totalBudget = Duration.ofHours(12);
-        Duration nodeBudget = totalBudget.dividedBy(hostCount);
-        versions.setTarget(NodeType.host, version1, totalBudget,false);
+        versions.setTarget(NodeType.host, version1, false);
         versions.resumeUpgradeOf(NodeType.host, true);
 
         // One host is deprovisioning
-        assertEquals(1, hostNodes.get().deprovisioning().size());
+        assertEquals(maxActiveUpgrades, hostNodes.get().deprovisioning().size());
 
-        // Nothing happens on next resume as first host has not spent its budget
+        // Nothing happens on next resume as first batch has not completed upgrade
         versions.resumeUpgradeOf(NodeType.host, true);
         NodeList nodesDeprovisioning = hostNodes.get().deprovisioning();
-        assertEquals(1, nodesDeprovisioning.size());
+        assertEquals(maxActiveUpgrades, nodesDeprovisioning.size());
         assertEquals(2, deprovisioningChildrenOf(nodesDeprovisioning.asList().get(0)).size());
+        completeReprovisionOf(nodesDeprovisioning.asList());
 
-        // Budget has been spent and another host is retired
-        clock.advance(nodeBudget);
-        versions.resumeUpgradeOf(NodeType.host, true);
-        assertEquals(2, hostNodes.get().deprovisioning().size());
-
-        // Two nodes complete their upgrade by being reprovisioned
-        completeReprovisionOf(hostNodes.get().deprovisioning().asList());
-        assertEquals(2, hostNodes.get().onOsVersion(version1).size());
-        // The remaining hosts complete their upgrade
-        for (int i = 0; i < hostCount - 2; i++) {
-            clock.advance(nodeBudget);
+        // Remaining hosts complete upgrades one by one
+        for (int i = 0; i < hostCount - 2; i += maxActiveUpgrades) {
             versions.resumeUpgradeOf(NodeType.host, true);
             nodesDeprovisioning = hostNodes.get().deprovisioning();
-            assertEquals(1, nodesDeprovisioning.size());
+            assertEquals(maxActiveUpgrades, nodesDeprovisioning.size());
             assertEquals(2, deprovisioningChildrenOf(nodesDeprovisioning.asList().get(0)).size());
             completeReprovisionOf(nodesDeprovisioning.asList());
         }
@@ -216,54 +203,47 @@ public class OsVersionsTest {
         // All hosts upgraded and none are deprovisioning
         assertEquals(hostCount, hostNodes.get().onOsVersion(version1).not().deprovisioning().size());
         assertEquals(hostCount, tester.nodeRepository().nodes().list(Node.State.deprovisioned).size());
-        var lastRetiredAt = clock.instant().truncatedTo(ChronoUnit.MILLIS);
 
         // Resuming after everything has upgraded does nothing
         versions.resumeUpgradeOf(NodeType.host, true);
         assertEquals(0, hostNodes.get().deprovisioning().size());
-
-        // Another upgrade is triggered. Last retirement time is preserved
-        clock.advance(Duration.ofDays(1));
-        var version2 = Version.fromString("7.2");
-        versions.setTarget(NodeType.host, version2, totalBudget, false);
-        assertEquals(lastRetiredAt, versions.readChange().targets().get(NodeType.host).lastRetiredAt().get());
     }
 
     @Test
     public void upgrade_by_retiring_everything_at_once() {
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.builder().dynamicProvisioning(true).build(), Integer.MAX_VALUE);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.builder().dynamicProvisioning(true).build());
+        setMaxActiveUpgrades(Integer.MAX_VALUE);
         int hostCount = 3;
-        provisionInfraApplication(hostCount, infraApplication, NodeType.confighost);
+        provisionInfraApplication(hostCount, infraApplication, NodeType.host);
         Supplier<NodeList> hostNodes = () -> tester.nodeRepository().nodes().list()
-                                                   .nodeType(NodeType.confighost)
+                                                   .nodeType(NodeType.host)
                                                    .not().state(Node.State.deprovisioned);
-        tester.clock().advance(Duration.ofDays(31)); // Let grace period pass
 
-        // Target is set with zero budget and upgrade started
+        // Target is set and upgrade started
         var version1 = Version.fromString("7.1");
-        versions.setTarget(NodeType.confighost, version1, Duration.ZERO,false);
+        versions.setTarget(NodeType.host, version1, false);
         for (int i = 0; i < hostCount; i++) {
-            versions.resumeUpgradeOf(NodeType.confighost, true);
+            versions.resumeUpgradeOf(NodeType.host, true);
         }
 
         // All hosts are deprovisioning
         assertEquals(hostCount, hostNodes.get().deprovisioning().size());
         // Nodes complete their upgrade by being reprovisioned
-        completeReprovisionOf(hostNodes.get().deprovisioning().asList(), NodeType.confighost);
+        completeReprovisionOf(hostNodes.get().deprovisioning().asList(), NodeType.host);
         assertEquals(hostCount, hostNodes.get().onOsVersion(version1).size());
     }
 
     @Test
     public void upgrade_by_rebuilding() {
-        tester.flagSource().withIntFlag(PermanentFlags.MAX_REBUILDS.id(), 1);
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud(), Integer.MAX_VALUE);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud());
+        setMaxActiveUpgrades(1);
         int hostCount = 10;
         provisionInfraApplication(hostCount + 1);
         Supplier<NodeList> hostNodes = () -> tester.nodeRepository().nodes().list().nodeType(NodeType.host);
 
         // All hosts upgrade to first version. Upgrades are delegated
         var version0 = Version.fromString("7.0");
-        versions.setTarget(NodeType.host, version0, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version0, false);
         setCurrentVersion(hostNodes.get().asList(), version0);
 
         // One host is failed out
@@ -272,7 +252,7 @@ public class OsVersionsTest {
 
         // Target is set for new major version. Upgrade mechanism switches to rebuilding
         var version1 = Version.fromString("8.0");
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version1, false);
         versions.resumeUpgradeOf(NodeType.host, true);
 
         // One host starts rebuilding
@@ -307,8 +287,9 @@ public class OsVersionsTest {
         assertEquals(0, hostNodes.get().rebuilding(false).size());
 
         // Next version is within same major. Upgrade mechanism switches to delegated
+        setMaxActiveUpgrades(100);
         var version2 = Version.fromString("8.1");
-        versions.setTarget(NodeType.host, version2, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version2, false);
         versions.resumeUpgradeOf(NodeType.host, true);
         NodeList nonFailingHosts = hostNodes.get().except(failedHost);
         assertTrue("Wanted version is set", nonFailingHosts.stream()
@@ -333,9 +314,12 @@ public class OsVersionsTest {
         int hostCount = 12;
         boolean softRebuild = true;
 
-        tester.flagSource().withIntFlag(PermanentFlags.MAX_REBUILDS.id(), maxRebuilds);
-        tester.flagSource().withBooleanFlag(Flags.SOFT_REBUILD.id(), softRebuild);
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.builder().dynamicProvisioning(true).name(CloudName.AWS).build(), Integer.MAX_VALUE);
+        setMaxActiveUpgrades(maxRebuilds);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.builder()
+                                                                    .dynamicProvisioning(true)
+                                                                    .name(CloudName.AWS)
+                                                                    .account(CloudAccount.from("000000000000"))
+                                                                    .build());
 
         provisionInfraApplication(hostCount, infraApplication, NodeType.host, NodeResources.StorageType.remote);
         Supplier<NodeList> hostNodes = () -> tester.nodeRepository().nodes().list().nodeType(NodeType.host);
@@ -343,7 +327,7 @@ public class OsVersionsTest {
         // New target is set
         int hostsRebuilt = 0;
         var version1 = Version.fromString("8.0");
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version1, false);
         versions.resumeUpgradeOf(NodeType.host, true);
 
         // First batch of hosts start rebuilding
@@ -379,8 +363,8 @@ public class OsVersionsTest {
 
     @Test
     public void upgrade_by_rebuilding_multiple_host_types() {
-        tester.flagSource().withIntFlag(PermanentFlags.MAX_REBUILDS.id(), 1);
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud(), Integer.MAX_VALUE);
+        setMaxActiveUpgrades(1);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud());
         int hostCount = 3;
         provisionInfraApplication(hostCount, infraApplication, NodeType.host);
         provisionInfraApplication(hostCount, ApplicationId.from("hosted-vespa", "confighost", "default"), NodeType.confighost);
@@ -389,14 +373,14 @@ public class OsVersionsTest {
 
         // All hosts upgrade to first version. Upgrades are delegated
         var version0 = Version.fromString("7.0");
-        versions.setTarget(NodeType.host, version0, Duration.ZERO, false);
-        versions.setTarget(NodeType.confighost, version0, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version0, false);
+        versions.setTarget(NodeType.confighost, version0, false);
         setCurrentVersion(hosts.get().asList(), version0);
 
         // Target is set for new major version
         var version1 = Version.fromString("8.0");
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
-        versions.setTarget(NodeType.confighost, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version1, false);
+        versions.setTarget(NodeType.confighost, version1, false);
 
         // One  host of each type is upgraded
         for (int i = 0; i < hostCount; i++) {
@@ -412,8 +396,8 @@ public class OsVersionsTest {
 
     @Test
     public void upgrade_by_rebuilding_is_limited_by_stateful_clusters() {
-        tester.flagSource().withIntFlag(PermanentFlags.MAX_REBUILDS.id(), 3);
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud(), Integer.MAX_VALUE);
+        setMaxActiveUpgrades(3);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud());
         int hostCount = 5;
         ApplicationId app1 = ApplicationId.from("t1", "a1", "i1");
         ApplicationId app2 = ApplicationId.from("t2", "a2", "i2");
@@ -424,12 +408,12 @@ public class OsVersionsTest {
 
         // All hosts are on initial version
         var version0 = Version.fromString("7.0");
-        versions.setTarget(NodeType.host, version0, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version0, false);
         setCurrentVersion(hosts.get().asList(), version0);
 
         // Target is set for new major version
         var version1 = Version.fromString("8.0");
-        versions.setTarget(NodeType.host, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.host, version1, false);
 
         // Upgrades 1 host per stateful cluster and 1 empty host
         versions.resumeUpgradeOf(NodeType.host, true);
@@ -443,7 +427,7 @@ public class OsVersionsTest {
         for (int i = 0; i < hostsRebuilding.size(); i++) {
             Optional<ApplicationId> owner = owners.get(i);
             List<Node> retiringChildren = allNodes.childrenOf(hostsRebuilding.get(i)).retiring().asList();
-            assertEquals(owner.isPresent() ? 1 : 0, retiringChildren.size());
+            assertEquals("Retiring children of " + hostsRebuilding.get(i) + ": " + retiringChildren, owner.isPresent() ? 1 : 0, retiringChildren.size());
             assertEquals("Rebuilding host of " + owner.map(ApplicationId::toString)
                                                       .orElse("no application"),
                          owner,
@@ -490,19 +474,19 @@ public class OsVersionsTest {
     @Test
     public void upgrade_by_rebuilding_limits_infrastructure_host() {
         int hostCount = 3;
-        tester.flagSource().withIntFlag(PermanentFlags.MAX_REBUILDS.id(), hostCount);
-        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud(), Integer.MAX_VALUE);
+        setMaxActiveUpgrades(hostCount);
+        var versions = new OsVersions(tester.nodeRepository(), Cloud.defaultCloud());
         provisionInfraApplication(hostCount, infraApplication, NodeType.proxyhost);
         Supplier<NodeList> hosts = () -> tester.nodeRepository().nodes().list().nodeType(NodeType.proxyhost);
 
         // All hosts are on initial version
         var version0 = Version.fromString("7.0");
-        versions.setTarget(NodeType.proxyhost, version0, Duration.ZERO, false);
+        versions.setTarget(NodeType.proxyhost, version0, false);
         setCurrentVersion(hosts.get().asList(), version0);
 
         // Target is set for new major version
         var version1 = Version.fromString("8.0");
-        versions.setTarget(NodeType.proxyhost, version1, Duration.ZERO, false);
+        versions.setTarget(NodeType.proxyhost, version1, false);
 
         // Upgrades 1 infrastructure host at a time
         for (int i = 0; i < hostCount; i++) {
@@ -511,6 +495,10 @@ public class OsVersionsTest {
             assertEquals(1, hostsRebuilding.size());
             completeRebuildOf(hostsRebuilding, NodeType.proxyhost);
         }
+    }
+
+    private void setMaxActiveUpgrades(int max) {
+        tester.flagSource().withIntFlag(PermanentFlags.MAX_OS_UPGRADES.id(), max);
     }
 
     private void deployApplication(ApplicationId application) {
@@ -551,10 +539,11 @@ public class OsVersionsTest {
                                                                        NodeResources.DiskSpeed.fast, storageType),
                                           nodeType, 10);
         tester.prepareAndActivateInfraApplication(application, nodeType);
+        tester.clock().advance(Duration.ofDays(1).plusSeconds(1)); // Let grace period pass
         return nodes.stream()
                     .map(Node::hostname)
                     .flatMap(hostname -> tester.nodeRepository().nodes().node(hostname).stream())
-                    .collect(Collectors.toList());
+                    .toList();
 
     }
 
@@ -587,7 +576,7 @@ public class OsVersionsTest {
             Optional<Version> wantedOsVersion = node.status().osVersion().wanted();
             if (node.status().wantToDeprovision()) {
                 ApplicationId application = node.allocation().get().owner();
-                tester.nodeRepository().nodes().park(node.hostname(), false, Agent.system,
+                tester.nodeRepository().nodes().park(node.hostname(), true, Agent.system,
                                                      getClass().getSimpleName());
                 tester.nodeRepository().nodes().removeRecursively(node.hostname());
                 node = provisionInfraApplication(1, application, nodeType).get(0);
@@ -602,13 +591,13 @@ public class OsVersionsTest {
             Optional<Version> wantedOsVersion = node.status().osVersion().wanted();
             if (node.status().wantToRebuild()) {
                 ApplicationId application = node.allocation().get().owner();
-                tester.nodeRepository().nodes().park(node.hostname(), false, Agent.system,
+                tester.nodeRepository().nodes().park(node.hostname(), true, Agent.system,
                                                      getClass().getSimpleName());
                 tester.nodeRepository().nodes().removeRecursively(node.hostname());
                 Node newNode = Node.create(node.id(), node.ipConfig(), node.hostname(), node.flavor(), node.type())
                                    .build();
                 node = tester.nodeRepository().nodes().addNodes(List.of(newNode), Agent.system).get(0);
-                node = tester.nodeRepository().nodes().setReady(node.hostname(), Agent.system, getClass().getSimpleName());
+                node = tester.move(Node.State.ready, node);
                 tester.prepareAndActivateInfraApplication(application, nodeType);
                 node = tester.nodeRepository().nodes().node(node.hostname()).get();
             }
